# java-instance-manager

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: cmd.rs  main.rs
src/cmd/: add.rs  get.rs  list.rs  set.rs
