[package]
name = "jim"
authors = [ "Cameron Ward <cameronuward@gmail.com>" ]
description = "java instance manager"
license="GPL-3.0"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "3.2.18", features = ["derive", "backtrace"] }
dirs = "4"
symlink = "0.1"
fs_extra = "1.2"
