[package]
name = "jim"
authors = [ "Cameron Ward <cameronuward@gmail.com>" ]
description = "java instance manager"
repository = "https://github.com/camuward/jim"
license = "GPL-3.0"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "3.2.18", features = ["derive", "backtrace"] }
dirs = "4"
symlink = "0.1"
dircpy = "0.3"
log = "0.4"
env_logger = "0.9"
dunce = "1.0"
