[package]
name = "jim"
authors = [ "Cameron Ward <cameronuward@gmail.com>" ]
description = "java instance manager"
repository = "https://github.com/camuward/jim"
license = "GPL-3.0"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
atty = "0.2"
clap = { version = "3.2", features = ["derive", "backtrace"] }
dircpy = "0.3"
dirs = "4"
dunce = "1.0"
env_logger = "0.9"
humantime = "2.1"
log = "0.4"
rayon = "1.5"
symlink = "0.1"
wild = "2.1"
